# c_template_project

./: CMakeLists.txt  README.md
src/: main.c
